client/src/style.css
.app-menu, .app-editor, .app-lector {
  font-family: 'Segoe UI', sans-serif;
  background-color: #777777;
  overflow-x: hidden;
  text-align: center;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1468px;
  width : 1468px;
  height: 100%;
  max-height: 717px;
  justify-content: flex-start;
  background-color: #F3F4F6;
  box-sizing: border-box;
  transform: translateZ(0);
  backface-visibility: hidden;
}

.app-menu, .app-editor {
  max-width: 1468px;
  width: 1468px;
  overflow-y: scroll;
}

.app-lector {
  max-width: 911px;
  width: 911px;
  overflow-y: hidden;
}

.app-menu.no-scroll, .app-editor.no-scroll, .app-lector.no-scroll {
  overflow-y: hidden;
}

body {
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

